# rd2d

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md
.benchmarks/2026-05-27/: .gitignore  README.md  bench_python.py  bench_r.R  bench_stata.do  check_numerics.py  check_tolerances.py  make_inputs.R  profile_python.py  profile_r.R  profile_stata.do  report_status.py  summarize_benchmarks.py  test_stata_single_mlib.do  validate_workspace.py
.githooks/: pre-push
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/workflows/: R-CMD-check.yaml  ci.yml  python-publish.yml
Python/: .gitignore  README.md  compare_empapp_outputs.py  rd2d_data.csv  rd2d_illustration.py  rd2d_plot.py
Python/rd2d/: LICENSE.md  README.md  pyproject.toml
Python/rd2d/rd2d/: __init__.py  _utils.py  distance.py  location.py  results.py
Python/rd2d/tests/: test_basic.py
R/: README.md  rd2d_data.csv  rd2d_dgp.R  rd2d_illustration.R  rd2d_plot.R  rd2d_plot_effects.R  rd2d_plot_heatmaps.R  rd2d_simulate.R
R/Data/: data_rd2d.csv  eval.csv
R/rd2d/: .Rbuildignore  DESCRIPTION  MD5  NAMESPACE  NEWS.md  cran-comments.md
R/rd2d/R/: rd2d-package.R  rd2d.R  rd2d_dist.R  rd2d_dist_fn.R  rd2d_distance.R  rd2d_distance_fn.R  rd2d_fn.R  rd2d_fn_v2.R  rd2d_methods.R  rdbw2d.R  rdbw2d_dist.R  rdbw2d_distance.R
R/rd2d/man/: coef.rd2d.Rd  confint.rd2d.Rd  plot.rd2d.Rd  print.rd2d.Rd  print.rd2d.distance.Rd  print.rdbw2d.Rd  print.rdbw2d.distance.Rd  rd2d-package.Rd  rd2d.Rd  rd2d.dist.Rd  rd2d.distance.Rd  rdbw2d.Rd  rdbw2d.dist.Rd  rdbw2d.distance.Rd  summary.rd2d.Rd  summary.rd2d.dist.Rd  summary.rd2d.distance.Rd  summary.rdbw2d.Rd  summary.rdbw2d.dist.Rd  summary.rdbw2d.distance.Rd  vcov.rd2d.Rd
R/rd2d/tests/: testthat.R
scripts/: build-stata-help-pdfs.do  build-stata-help-pdfs.py  check-local.R
stata/: lrd2d.mlib  rd2d.ado  rd2d.pkg  rd2d.sthlp  rd2d_apply_location_bwcheck.mo  rd2d_basis1.mo  rd2d_basis2.mo  rd2d_bwbase.mo  rd2d_cer_factor.mo  rd2d_ci_table.mo  rd2d_dist.ado  rd2d_dist.sthlp  rd2d_dist_illustration.do  rd2d_distance.ado  rd2d_distance.sthlp  rd2d_distance_bw_simple.mo  rd2d_distance_stata.mo  rd2d_distance_weights.mo  rd2d_fact.mo  rd2d_fit_distance_order.mo  rd2d_fit_location_order.mo  rd2d_functions.do  rd2d_illustration.do  rd2d_is_cer.mo  rd2d_is_common.mo  rd2d_kernel.mo  rd2d_kth_bounds.mo  rd2d_local_fit.mo  rd2d_location_bw_simple.mo  rd2d_location_stata.mo  rd2d_location_weights.mo  rd2d_parse_numlist.mo  rd2d_rot_distance.mo  rd2d_rot_location.mo  rd2d_target1.mo  rd2d_target2.mo  rdbw2d.ado  rdbw2d.sthlp  rdbw2d_dist.ado  rdbw2d_dist.sthlp  (+5 more)
(+3 files in other folders)
