[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rd2d"
version = "1.0.0"
description = "Local polynomial methods for boundary discontinuity designs"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE.md"]
authors = [
  { name = "Matias D. Cattaneo" },
  { name = "Rocio Titiunik" },
  { name = "Ruiqi Rae Yu" }
]
maintainers = [
  { name = "Matias D. Cattaneo", email = "matias.d.cattaneo@gmail.com" }
]
keywords = [
  "boundary discontinuity",
  "regression discontinuity",
  "causal inference",
  "local polynomial",
  "bandwidth selection"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy",
  "pandas",
  "scipy"
]

[project.optional-dependencies]
plots = ["matplotlib"]
replication = ["rdrobust"]
test = ["pytest"]

[project.urls]
Homepage = "https://rdpackages.github.io/"
Repository = "https://github.com/rdpackages/rd2d"
Issues = "https://github.com/rdpackages/rd2d/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rd2d*"]
